--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -20,8 +20,9 @@
 		)"></template>
 		{% endfor %}
 		<template x-init="truncateEquipment()"></template>
+		<template x-init="initParams()"></template>
 		<h1>Backgrounds</h1>
-		<input type="text" name="tableinput" id="tableinput" placeholder="Search Backgrounds..." x-model="query">
+		<input type="text" name="tableinput" id="tableinput" placeholder="Search Backgrounds..." x-model="query" @keyup="updateQuery()">
 		<table name="filtertable" id="filtertable">
 			<tr class="header">
 				<th style="width: 25%">Background Name</th>
