--- a/website/templates/items.html
+++ b/website/templates/items.html
@@ -16,38 +16,24 @@
 				weight: {% if item.weight %} {{ item.weight }} {% else %} null {% endif %}
 			}
 		)"></template>
+		<template x-init="initParams()"></template>
 		{% endfor %}
 		<h1>Items</h1>
-		<input 
-			type="text" 
-			name="tableinput" 
-			id="tableinput" 
-			placeholder="Search Items..." 
-			x-model="query">
+		<input type="text" name="tableinput" id="tableinput" placeholder="Search Items..." x-model="query" @keyup="updateQuery()">
 		<div class="interior flex horizontal center" style="width: calc(100% - 24px); padding: 12px; background-color: var(--nord-inactive); margin: 12px">
-			<form 
-				class="interior flex horizontal space-between" 
-				style="width: 100%; box-sizing: border-box; margin: 0px; background-color: inherit">
-				<div 
-					class="interior flex horizontal start" 
-					style="width: auto; background-color: inherit">
+			<form class="interior flex horizontal space-between" style="width: 100%; box-sizing: border-box; margin: 0px; background-color: inherit">
+				<div class="interior flex horizontal start" style="width: auto; background-color: inherit">
 					<label for="tags">Tags:</label>
-					<select 
-						name="tags" 
-						id="tags" 
-						x-model="tags" 
-						style="width: auto" 
-						@change="appendTag()">
+					<select name="tags" id="tags" x-model="tags" style="width: auto" @change="appendTag()">
+						<option value="">Select</option>
 						{% for tag in cruleset.item_tags %}
 						<option>{{ tag.name }}</option>
 						{% endfor %}
 					</select>
 				</div>
-				<div 
-					class="interior flex horizontal start" 
-					style="width: auto; background-color: inherit">
+				<div class="interior flex horizontal start" style="width: auto; background-color: inherit">
 					<label for="filterType">Filter Type: </label>
-					<select name="filterType" id="filterType" x-model="filtertype" style="width:auto">
+					<select name="filterType" id="filterType" x-model="filtertype" style="width:auto" @change="updateFilter()">
 						<option>AND</option>
 						<option>OR</option>
 					</select>
