--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -39,7 +39,7 @@ body {
     background-color: var(--nord-background);
     margin: 0;
     padding: auto;
-    height: 100%
+    height: 100%;
 }
 
 footer,footer a {
