--- a/website/static/css/text.css
+++ b/website/static/css/text.css
@@ -32,6 +32,14 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+h1 .anchor, h2 .anchor, h3 .anchor, h4 .anchor, h5 .anchor, h6 .anchor {
+    visibility: hidden;
+}
+
+h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5:hover .anchor, h6:hover .anchor {
+    visibility: visible;
+}
+
 p {
     width: 100%;
     margin: 0;
