--- a/website/templates/actions.html
+++ b/website/templates/actions.html
@@ -2,7 +2,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-and-hash.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -11,7 +11,7 @@
 		<h1>Actions</h1>
 		{% for action in cruleset.actions %}
 		<div class="usercontent">
-			<h2 x-text="'{{ action.name }}'"></h2>
+			<h2 id="{{ action.name.casefold().replace(' ', '-') }}"><a @click="CopyHash(`{{ action.name.casefold().replace(' ', '-') }}`)">{{ action.name }} <span class="anchor">🔗</span></a></h2>
 			{% if current_user.id == cruleset.userid %}
 			<div>
 				<a href="{{ url_for('eprefs.duplicateAction', action=action.name, ruleset=cruleset.identifier) }}"><button style="width: auto">Duplicate {{ action.name }}</button></a>
