--- a/website/templates/background.html
+++ b/website/templates/background.html
@@ -1,23 +1,24 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-and-hash.js') }}"></script>
 {% endblock %}
 
 {% block body %}
 <div class="flex" x-data="main">
-    <div class="flex vertical start">
-        <h1>{{ background.name }}</h1>
+    <div class="flex vertical start usercontent">
+        <template x-init="InitHeaderIDs()"></template>
+        <h1 id="{{ background.name.casefold().replace(' ', '-') }}"><a @click="CopyHash(`{{ background.name.casefold().replace(' ', '-') }}`)">{{ background.name }} <span class="anchor">🔗</span></a></h1>
         <div class="usercontent" x-html="convert(`{{ background.text }}`)"></div>
         {% for feature in background.background_features %}
-        <h2>{{ feature.name }}</h2>
+        <h2 id="{{ feature.name.casefold().replace(' ', '-') }}"><a @click="CopyHash(`{{ feature.name.casefold().replace(' ', '-') }}`)">{{ feature.name }} <span class="anchor">🔗</span></a></h2>
         <div class="usercontent" x-html="convert(`{{ feature.text }}`)"></div>
         {% endfor %}
         {% if cruleset.userid == current_user.id %}
         <div class="interior flex horizontal center">
-            <a href="{{ url_for('epchar.duplicateBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ background.name }}</button></a>
-            <a href="{{ url_for('epchar.editBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Edit {{ background.name }}</button></a>
-            <a href="{{ url_for('epchar.deleteBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.duplicateBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ background.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.editBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button">Edit {{ background.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.deleteBackground', background=background.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ background.name }}</button></a>
         </div>
         {% endif %}
     </div>
