--- a/website/templates/feat.html
+++ b/website/templates/feat.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="flex" x-data="main">
-    <div class="flex vertical start">
+    <div class="flex vertical start userconent">
         <h1>{{ feat.name }}</h1>
         {% if feat.prerequisite != "" %}
             <p><strong><em>Prerequisite: </em></strong>{{ feat.prerequisite }}</p>
@@ -14,9 +14,9 @@
         <div class="usercontent" x-html="convert(`{{ feat.text }}`)"></div>
         {% if cruleset.userid == current_user.id %}
         <div class="interior flex horizontal center">
-            <a href="{{ url_for('epchar.duplicateFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ feat.name }}</button></a>
-            <a href="{{ url_for('epchar.editFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type=button>Edit {{ feat.name }}</button></a>
-            <a href="{{ url_for('epchar.deleteFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ feat.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.duplicateFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button">Duplicate {{ feat.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.editFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type=button>Edit {{ feat.name }}</button></a>
+            <a style="width: auto; margin: 12px" href="{{ url_for('epchar.deleteFeat', feat=feat.name, ruleset=cruleset.identifier) }}"><button type="button" class="mild danger">Delete {{ feat.name }}</button></a>
         </div>
         {% endif %}
     </div>
