--- a/website/templates/languages.html
+++ b/website/templates/languages.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-and-hash.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -10,7 +10,7 @@
 		<h1>Languages</h1>
 		{% for language in cruleset.languages %}
 		<div class="usercontent">
-			<h2 x-text="`{{ language.name }}`"></h2>
+			<h2 id="{{ language.name.casefold().replace(' ', '-') }}"><a @click="CopyHash(`{{ language.name.casefold().replace('-', ' ') }}`)">{{ language.name }}</a> <span class="anchor">🔗</span></h2>
 			{% if cruleset.userid == current_user.id %}
 				<div>
 					<a href="{{ url_for('eprefs.editLanguage', language=language.name, ruleset=cruleset.identifier) }}"><button style="width: auto">Edit {{ language.name }}</button></a>
