--- a/website/templates/recipes.html
+++ b/website/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='js/showdown-only.js') }}"></script>
+<script src="{{ url_for('static', filename='js/showdown-and-hash.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -10,7 +10,7 @@
 		<h1>Recipes</h1>
 		{% for recipe in cruleset.recipes %}
 		<div class="usercontent">
-			<h2 x-text="'{{ recipe.name }}'"></h2>
+			<h2 id="{{ recipe.name.casefold().replace(' ', '-') }}"><a @click="CopyHash(`{{ recipe.name.casefold().replace(' ', '-') }}`)">{{ recipe.name }}</a> <span class="anchor">🔗</span></h2>
 			{% if cruleset.userid == current_user.id %}
 			<div>
 				<a href="{{ url_for('eprefs.editRecipe', recipe=recipe.name, ruleset=cruleset.identifier) }}"><button style="width: auto">Edit {{ recipe.name }}</button></a>
