istg this isn't abandonware; i've just been distracted; fixed some of the test code in npc generator

--- a/website/templates/gen-npc.html
+++ b/website/templates/gen-npc.html
@@ -269,12 +269,12 @@
         </div>
         <div class="interior flex horizontal center" style="width: 50%">
             <h6 style="width: 100%">Ability Scores</h6>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Strength: </em></strong><span style="width: 50%" x-text="character.strength"></span>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Dexterity: </em></strong><span style="width: 50%" x-text="character.dexterity"></span>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Constitution: </em></strong><span style="width: 50%" x-text="character.constitution"></span>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Intelligence: </em></strong><span style="width: 50%" x-text="character.intelligence"></span>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Wisdom: </em></strong><span style="width: 50%" x-text="character.wisdom"></span>
-            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Charisma: </em></strong><span style="width: 50%" x-text="character.charisma"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Strength: </em></strong><span style="width: 50%" x-text="displayed_character.strength"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Dexterity: </em></strong><span style="width: 50%" x-text="displayed_character.dexterity"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Constitution: </em></strong><span style="width: 50%" x-text="displayed_character.constitution"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Intelligence: </em></strong><span style="width: 50%" x-text="displayed_character.intelligence"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Wisdom: </em></strong><span style="width: 50%" x-text="displayed_character.wisdom"></span>
+            <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Charisma: </em></strong><span style="width: 50%" x-text="displayed_character.charisma"></span>
             <h6 style="width: 100%">Personal</h6>
             <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Ideal: </em></strong><span style="width: 50%" x-text="displayed_character.ideal"></span>
             <strong style="margin-right: 8px; width: calc(50% - 8px); text-align: right"><em>Bond: </em></strong><span style="width: 50%" x-text="displayed_character.bond"></span>
